--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "manifest_version": 3,
   "name": "UnCopy - Link Tracker Remover",
-  "version": "1.0.0",
-  "description": "Automatically removes tracking parameters from URLs",
+  "version": "1.1.0",
+  "description": "Removes tracking parameters and unwraps redirect URLs",
   "permissions": [
     "clipboardWrite",
     "clipboardRead",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -18,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["cleaner.js", "content.js"],
       "run_at": "document_end"
     }
   ]
